--- a/package.json
+++ b/package.json
@@ -1,54 +1,64 @@
 {
-  "name": "mail-service-nextjs",
+  "name": "mailing-service",
   "version": "2.0.0",
-  "description": "Modern email service built with Next.js, TypeScript, and Tailwind CSS",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "type-check": "tsc --noEmit",
-    "setup": "cp .env.example .env.local && echo 'Please edit .env.local with your SMTP settings'",
-    "clean": "rm -rf .next out",
-    "export": "next build && next export"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:e2e": "playwright test",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:seed": "prisma db seed",
+    "prisma:studio": "prisma studio",
+    "queue:worker": "node src/workers/emailWorker.js",
+    "cleanup": "node src/scripts/cleanup.js"
   },
   "dependencies": {
-    "@prisma/client": "^6.14.0",
-    "dotenv": "^16.3.1",
-    "lucide-react": "^0.263.1",
-    "next": "15.4.6",
+    "@prisma/client": "^5.7.0",
+    "bcryptjs": "^2.4.3",
+    "bull": "^4.11.5",
+    "csv-parse": "^5.5.3",
+    "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.2",
+    "lru-cache": "^10.1.0",
+    "lucide-react": "^0.294.0",
+    "next": "15.0.4",
     "nodemailer": "^6.9.7",
-    "react": "^18",
-    "react-dom": "^18",
-    "winston": "^3.11.0"
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "winston": "^3.11.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "@playwright/test": "^1.40.1",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "node-mocks-http": "^1.14.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/bull": "^4.10.0",
+    "@types/jest": "^29.5.11",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "eslint": "^8",
-    "eslint-config-next": "15.4.6",
+    "eslint-config-next": "15.0.4",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
-    "prisma": "^6.14.0",
+    "prisma": "^5.7.0",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.1.1",
     "typescript": "^5"
   },
-  "keywords": [
-    "email",
-    "smtp",
-    "nextjs",
-    "typescript",
-    "tailwind",
-    "mailing",
-    "bulk-email",
-    "templates",
-    "dashboard"
-  ],
-  "author": "Mail Service Team",
-  "license": "MIT",
-  "engines": {
-    "node": ">=18.0.0"
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
